[gd_scene load_steps=9 format=2]

[ext_resource path="res://Cell/cell.tscn" type="PackedScene" id=1]
[ext_resource path="res://Stage/stage.gd" type="Script" id=2]
[ext_resource path="res://Sprites/border_thick.png" type="Texture" id=3]
[ext_resource path="res://Stage/stage_view.gd" type="Script" id=4]
[ext_resource path="res://Stage/state_controller.gd" type="Script" id=5]
[ext_resource path="res://Stage/selection_controller.gd" type="Script" id=6]
[ext_resource path="res://Stage/Border/border.tscn" type="PackedScene" id=7]
[ext_resource path="res://Stage/number_write_controller.gd" type="Script" id=9]

[node name="Stage" type="Node2D"]
script = ExtResource( 2 )

[node name="Controllers" type="Node2D" parent="."]

[node name="SelectionController" type="Node2D" parent="Controllers"]
script = ExtResource( 6 )

[node name="CellWriteController" type="Node2D" parent="Controllers"]
script = ExtResource( 9 )

[node name="StateController" type="Node2D" parent="Controllers"]
script = ExtResource( 5 )

[node name="Grid" type="Node2D" parent="."]
position = Vector2( 384, 64 )

[node name="Cell" parent="Grid" instance=ExtResource( 1 )]

[node name="Cell2" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 64, 0 )

[node name="Cell3" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 128, 0 )

[node name="Cell4" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 200, 0 )

[node name="Cell5" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 264, 0 )

[node name="Cell6" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 328, 0 )

[node name="Cell7" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 400, 0 )

[node name="Cell8" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 464, 0 )

[node name="Cell9" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 528, 0 )

[node name="Cell10" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 0, 64 )

[node name="Cell11" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 64, 64 )

[node name="Cell12" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 128, 64 )

[node name="Cell13" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 200, 64 )

[node name="Cell14" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 264, 64 )

[node name="Cell15" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 328, 64 )

[node name="Cell16" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 400, 64 )

[node name="Cell17" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 464, 64 )

[node name="Cell18" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 528, 64 )

[node name="Cell19" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 0, 128 )

[node name="Cell20" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 64, 128 )

[node name="Cell21" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 128, 128 )

[node name="Cell22" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 200, 128 )

[node name="Cell23" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 264, 128 )

[node name="Cell24" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 328, 128 )

[node name="Cell25" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 400, 128 )

[node name="Cell26" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 464, 128 )

[node name="Cell27" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 528, 128 )

[node name="Cell28" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 0, 200 )

[node name="Cell29" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 64, 200 )

[node name="Cell30" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 128, 200 )

[node name="Cell31" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 200, 200 )

[node name="Cell32" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 264, 200 )

[node name="Cell33" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 328, 200 )

[node name="Cell34" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 400, 200 )

[node name="Cell35" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 464, 200 )

[node name="Cell36" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 528, 200 )

[node name="Cell37" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 0, 264 )

[node name="Cell38" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 64, 264 )

[node name="Cell39" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 128, 264 )

[node name="Cell40" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 200, 264 )

[node name="Cell41" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 264, 264 )

[node name="Cell42" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 328, 264 )

[node name="Cell43" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 400, 264 )

[node name="Cell44" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 464, 264 )

[node name="Cell45" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 528, 264 )

[node name="Cell46" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 0, 328 )

[node name="Cell47" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 64, 328 )

[node name="Cell48" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 128, 328 )

[node name="Cell49" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 200, 328 )

[node name="Cell50" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 264, 328 )

[node name="Cell51" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 328, 328 )

[node name="Cell52" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 400, 328 )

[node name="Cell53" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 464, 328 )

[node name="Cell54" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 528, 328 )

[node name="Cell55" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 0, 400 )

[node name="Cell56" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 64, 400 )

[node name="Cell57" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 128, 400 )

[node name="Cell58" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 200, 400 )

[node name="Cell59" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 264, 400 )

[node name="Cell60" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 328, 400 )

[node name="Cell61" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 400, 400 )

[node name="Cell62" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 464, 400 )

[node name="Cell63" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 528, 400 )

[node name="Cell64" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 0, 464 )

[node name="Cell65" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 64, 464 )

[node name="Cell66" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 128, 464 )

[node name="Cell67" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 200, 464 )

[node name="Cell68" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 264, 464 )

[node name="Cell69" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 328, 464 )

[node name="Cell70" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 400, 464 )

[node name="Cell71" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 464, 464 )

[node name="Cell72" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 528, 464 )

[node name="Cell73" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 0, 528 )

[node name="Cell74" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 64, 528 )

[node name="Cell75" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 128, 528 )

[node name="Cell76" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 200, 528 )

[node name="Cell77" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 264, 528 )

[node name="Cell78" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 328, 528 )

[node name="Cell79" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 400, 528 )

[node name="Cell80" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 464, 528 )

[node name="Cell81" parent="Grid" instance=ExtResource( 1 )]
position = Vector2( 528, 528 )

[node name="View" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="HoverBorder" type="Sprite" parent="View"]
position = Vector2( -128, -128 )
texture = ExtResource( 3 )
centered = false

[node name="Selection" parent="View" instance=ExtResource( 7 )]
visible = false
modulate = Color( 0.898039, 0, 1, 1 )
position = Vector2( 384, 64 )

[connection signal="end_selection" from="Controllers/SelectionController" to="." method="_on_SelectionController_end_selection"]
[connection signal="expand_selection" from="Controllers/SelectionController" to="." method="_on_SelectionController_expand_selection"]
[connection signal="keep_selection" from="Controllers/SelectionController" to="." method="_on_SelectionController_keep_selection"]
[connection signal="start_selection" from="Controllers/SelectionController" to="." method="_on_SelectionController_start_selection"]
[connection signal="stop_keep_selection" from="Controllers/SelectionController" to="." method="_on_SelectionController_stop_keep_selection"]
[connection signal="clear" from="Controllers/CellWriteController" to="." method="_on_CellWriteController_clear"]
[connection signal="number_wheel_exited" from="Controllers/CellWriteController" to="." method="_on_CellWriteController_number_wheel_exited"]
[connection signal="number_wheel_spawned" from="Controllers/CellWriteController" to="." method="_on_CellWriteController_number_wheel_spawned"]
[connection signal="write_number" from="Controllers/CellWriteController" to="." method="_on_CellWriteController_write_number"]
[connection signal="redo" from="Controllers/StateController" to="." method="_on_StateController_redo"]
[connection signal="undo" from="Controllers/StateController" to="." method="_on_StateController_undo"]
